src/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>Asset_Class_Geography_Picklist__c</fullName>
        <label>Asset Class-Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Emerging Markets (diversified) Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging Markets (diversified) Fixed Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging Markets Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Alternatives/Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Balanced/Multi-Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global ex US Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Fixed Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Country - Non US Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Alternatives/Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Balanced/Multi-Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Fixed Income</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Class_Geography__c</fullName>
        <formula>(TEXT((Product2.Geography__c)))&amp;&quot; &quot;&amp;(TEXT(Product2.Asset_Class__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Class-Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blended__c</fullName>
        <formula>Product2.Blended__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blended?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Unknown__c</fullName>
        <formula>Product2.Is_Unknown__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portfolio_Name__c</fullName>
        <formula>if( Product2.RecordType.DeveloperName =&apos;Strategy&apos;, &apos;&apos;,Product2.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT( Product2.Family )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Record_Type__c</fullName>
        <formula>IF( Product2.RecordType.DeveloperName =&apos;Portfolio&apos;, &apos;2.Portfolio&apos;,&apos;1.Strategy&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Style__c</fullName>
        <formula>TEXT(Product2.Style__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Style</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Vehicle__c</fullName>
        <formula>TEXT( Product2.Vehicle__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restricted__c</fullName>
        <formula>Product2.Restricted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strategy_Name__c</fullName>
        <formula>IF( Product2.RecordType.DeveloperName =&apos;Portfolio&apos;, Product2.Strategy__r.Name, Product2.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategy Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle</label>
        <picklist>
            <picklistValues>
                <fullName>Australia Unit Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collective Investment Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meridian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Family of Funds (US)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Investment Funds (FCP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separate Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subadvised Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIT II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIT III</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isValid__c</fullName>
        <formula>Product2.Is_Valid_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isValid</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>